we have a button now

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,13 @@
     </style>
   </head>
   <body>
-    <h1>Here's where our app will be!</h1>
+    <h1>Accountability Coach</h1>
+    I am going to
+    <input placeholder="eat 5 pigs">
+    </input>
+    by
+    <input placeholder="tomorrow">
+    </input>
+       <button  type="submit" >Please </button>
   </body>
 </html>
