--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,14 @@
   </head>
   <body>
     <h1>Accountability Coach</h1>
-    I am going to
-    <input placeholder="eat 5 pigs">
-    </input>
-    by
-    <input placeholder="tomorrow">
-    </input>
-       <button  type="submit" >Please </button>
+    <form method="post" action="commitments">
+      I am going to
+      <input placeholder="eat 5 pigs" name="goal">
+      </input>
+      by
+      <input placeholder="tomorrow" name="when">
+      </input>
+      <button  type="submit" >Please </button>
+    </form>
   </body>
 </html>
